test/files/pos/t2665.scala
object Test {
  val x: Unit = Array("") 
}