test/files/neg/t10701/Meh.scala
object Meh {
  @deprecated("","") def whatever: Unit = {}
}
